Navbar collapse, img fixes and logo fix

--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -4,4 +4,5 @@
 
 .navbar-brand {
   font-weight: 300;
+  padding: 10px;
 }
