--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -53,6 +53,7 @@
 
 .front-img {
   height: 290px;
+  max-width: 100%;
 }
 
 .full-backdrop {
